deploy/contents/k8s/kube-system/network-policy/isolate-runs-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-runs-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      network_policy_type: "isolate"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              cloud-pipeline/cp-edge: "true"
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: "kube-system"
      ports:
        - protocol: UDP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              cloud-pipeline/cp-api-srv: "true"
    - to:
        - podSelector:
            matchLabels:
              cloud-pipeline/cp-edge: "true"
    - to:
        - podSelector:
            matchLabels:
              cloud-pipeline/cp-sensitive-proxy: "true"
