deploy/contents/k8s/kube-system/network-policy/sensitive-runs-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sensitive-runs-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      sensitive: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            cloud-pipeline/role: EDGE
    - from:
      - podSelector:
          matchLabels:
            sensitive: "true"
